--- a/internet.html
+++ b/internet.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pesquisas</title>
-    <link rel="stylesheet" href="style dormindo.css">
+    <link rel="stylesheet" href="style internet.css">
 </head>
 <body>
     <a href="index.html">voltar</a><br>
